[package]
name = "pallet-acurast"
description = "Main acurast pallet defining jobs and attestation related extrinsics."
authors = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
license = "MIT"
homepage = "https://docs.acurast.com/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
acurast-common = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }

# benchmarks
hex-literal = { version = "0.4", optional = true }
parachain-info = { workspace = true, optional = true }
pallet-balances = { workspace = true, optional = true }
pallet-timestamp = { workspace = true, optional = true }
parachains-common = { workspace = true, optional = true }
log = { workspace = true }

[dev-dependencies]
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
hex-literal = "0.4"

sp-version = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
parachain-info = { workspace = true, features = ["std"] }
parachains-common = { workspace = true, features = ["std"] }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "hex-literal",
  "parachain-info",
  "pallet-balances/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "parachains-common",
]

std = [
  "parity-scale-codec/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "acurast-common/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
