[package]
name = "pallet-acurast-compute"
description = "Acurast pallet to handle compute benchmarks and era-based rewards distribution related to compute."
authors = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
license = "MIT"
homepage = "https://docs.acurast.com/"
edition = "2021"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
sp-core = { workspace = true }

acurast-common = { path = "../acurast/common", default-features = false }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }
pallet-balances = { workspace = true, optional = true }
pallet-uniques = { workspace = true, optional = true }
pallet-timestamp = { workspace = true, optional = true }
hex-literal = { version = "0.4", optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

# for RPC
sp-blockchain = { workspace = true, optional = true }
jsonrpsee = { version = "0.16.2", features = [
	"client-core",
	"server",
	"macros",
], optional = true }
sp-api = { workspace = true }
serde = { version = "1.0.188", features = [
	"derive",
], default-features = false, optional = true }
thiserror = { version = "1.0", optional = true }
log = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-uniques = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
hex-literal = { version = "0.4" }
serde_json = "1.0.85"

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"acurast-common/std",
	"sp-core/std",
	"pallet-uniques/std",
	"jsonrpsee",
	"log/std",
	"serde",
	"thiserror",
	"sp-blockchain",
    "sp-runtime/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-io",
	"pallet-balances/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"hex-literal",
]
try-runtime = ["frame-support/try-runtime"]
