[package]
name = "pallet-acurast-fulfillment-receiver"
authors = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
license = "MIT"
homepage = "https://docs.acurast.com/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }

# Acurast
acurast-common = { path = "../acurast/common", default-features = false }

# Benchmarks
frame-benchmarking = { workspace = true, optional = true }
sp-core = { workspace = true, optional = true }
hex-literal = { version = "0.4", optional = true }

[dev-dependencies]
hex-literal = "0.4"
sp-core = { workspace = true, features = ["std"] }

[features]
default = ["std"]

std = [
  "parity-scale-codec/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-std/std",
  "acurast-common/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-core",
	"hex-literal",
]
try-runtime = ["frame-support/try-runtime"]
