[package]
name = "pallet-acurast-hyperdrive-ibc"
description = "Acurast Hyperdrive enables inter-blockchain-communication (IBC) by bidirectional message passing"
authors = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
license = "MIT"
homepage = "https://docs.acurast.com/"
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4", default-features = false }
parity-scale-codec = { workspace = true }
sp-core = { workspace = true }
hex = { version = "0.4", default-features = false }
hex-literal = { version = "0.3", default-features = false }

# Acurast
pallet-acurast = { path = "../acurast", default-features = false }

# SDKs
tezos-core = { git = "https://github.com/airgap-it/tezos-rust-sdk", default-features = false, branch = "feat/nostd" }
tezos-michelson = { git = "https://github.com/airgap-it/tezos-rust-sdk", default-features = false, branch = "feat/nostd" }
derive_more = { version = "0.99.17", default-features = false }
strum = { version = "0.24.1", default-features = false }
strum_macros = { version = "0.24.1", default-features = false }
once_cell = { version = "1.17.1", default-features = false }

# EVM
rlp = { version = "0.5.2", default-features = false }
alloy-sol-types = { version = "0.3.1", default-features = false }

# Benchmarks
frame-benchmarking = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { version = "2.2.0", default-features = false, features = [
	"derive",
] }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-arithmetic = { workspace = true }
cumulus-primitives-core = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
pallet-timestamp = { workspace = true }
log = "0.4.20"
pallet-balances = { workspace = true }
hex-literal = { workspace = true }

[features]
default = ["std"]
std = [
	"alloy-sol-types/std",
	"parity-scale-codec/std",
	"hex/std",
	"rlp/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-acurast/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"strum/std",
	"tezos-core/std",
	"tezos-michelson/std",
	"sp-arithmetic/std",
	"cumulus-primitives-core/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-acurast/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
